--- a/Complete_Handbook%2FStarting_from_minimal_environment.mw
+++ b/Complete_Handbook%2FStarting_from_minimal_environment.mw
@@ -1,64 +1,99 @@
-The prompt you are now looking at is all-powerful, but a bit daunting at first. If you know how the Linux command line works, this chapter will give you no further surprises and you can easily jump to the next chapter, [[Complete Handbook/Preparing the network|Preparing the Network]].
+== Introduction ==
+
+The prompt you are now looking at is all-powerful, but a bit daunting at first.
+If you know how the Linux command line works, this chapter will give you no
+further surprises and you can easily jump to the next chapter, ''Preparing 
+the Network''.
 
 == Basic navigation ==
 
 === Working command-line ===
-At the prompt you can enter ''commands'' to the Gentoo Linux environment. Basic commands are just single words, like '''ls''' or '''ps'''. Most commands however often require additional words to be added, like '''cd /var''' or '''man ls'''. These added characters are called ''arguments''.
 
-More often, these arguments represent certain ''options'' to the command. For instance, the '''ls''' command (used to list the content of a directory) can take several options, like '''-l''' (for a lengthy description of each found file), '''-a''' (to include hidden files), etc.
+At the prompt you can enter ''commands'' to the Gentoo Linux environment.
+Basic commands are just single words, like '''ls''' or '''ps'''. Most commands
+however often require additional words to be added, like '''cd /var''' or
+'''man ls'''. These added characters are called ''arguments''.
 
-In the next code listing you'll see this terminology explained. The command shown will list the content of the {{Path|/var/tmp}} directory (a temporary location) showing additional information about each file found, including hidden files.
+More often, these arguments represent certain ''options'' to the command. For
+instance, the '''ls''' command (used to list the content of a directory) can
+take several options, like '''-l''' (for a lengthy description of each found
+file), '''-a''' (to include hidden files), etc.
 
- root # ls -la /var/tmp
- <-+--><+> <+> <---+-->
-   |    |   |      `- Argument, in this case the target directory to list
-   |    |   `- Argument, also two options: lengthy description + hidden files
-   |    `- Command (list in this case)
-   `- Prompt
+In the next Code Listing you'll see this terminology explained. The command
+shown will list the content of the {{Path|/var/tmp}} directory (a temporary
+location) showing additional information about each file found, including hidden
+files.
 
-After having constructed a command, you can execute it by pressing the {{Key|Return}} key. Your shell (the command-line environment you are currently "in" which interprets commands and helps you navigate through the Linux environment) will then execute the command and show you the results.
+{{RootCmd|ls -la /var/tmp|output=<pre>
+<-+--><+> <+> <---+-->
+  |    |   |      `- Argument, in this case the target directory to list
+  |    |   `- Argument, also two options: lengthy description + hidden files
+  |    `- Command (list in this case)
+  `- Prompt
+</pre>
+}}
 
-The next section will give you a crash course in certain Linux commands that will help you explore your current minimal Gentoo environment. We won't go in much detail - there are plenty of guides and books available online that will inform you about the basic Linux tools.
+After having constructed a command, you can execute it by pressing the return
+key. Your shell (the command-line environment you are currently "in" which
+interprets commands and helps you navigate through the Linux environment) will
+then execute the command and show you the results.
+
+The next section will give you a crash course in certain Linux commands that
+will help you explore your current minimal Gentoo environment. We won't go in
+much detail - there are plenty guides and books available online that will
+inform you about the basic Linux tools ([http://http://www.chongluo.com/books/rute/ Rute's
+Unix Tutorial Exposed] is one of the more famous, freely available books).
 
 === Navigating up and down ===
-We have already covered how a Linux file system looks like (the hierarchical structure, remember?). To help you out we'll give you a quick overview on the most common tools you might need to navigate on your Gentoo Linux system:
 
-{| class="wikitable"
+We have already covered how a Linux file system looks like (the hierarchical
+structure, remember?). To help you out we'll give you a quick overview on the
+most common tools you might need to navigate on your Gentoo Linux system:
+
+{| class="wikitable" style="text-align: left;"
 |- 
 ! Command
 ! Description
+! Example
 |- 
 | '''ls'''
 |  List the content of a given directory, or the current directory if no directory is given.
-{{Cmd|ls /mnt/cdrom}}
+| '''ls /mnt/cdrom'''
 |- 
 | '''pwd'''
 | Show the current working directory; this is the full pathname of the directory you are currently in.
-{{Cmd|pwd}}
+| '''pwd'''
 |- 
 | '''cd'''
 | Change the current working directory to a different location. If no directory is given, go to the user's home directory.
-{{Cmd|cd /mnt/gentoo}}
+| '''cd /mnt/gentoo'''
 |- 
 | '''less'''
-| Show the content of a given file on the screen. You can navigate with the {{Key|↑}} and {{Key|↓}} arrow keys through the file and quit the application by pressing {{Key|q}}.
-{{Cmd|less install.txt}}
+| Show the content of a given file on the screen. You can navigate with the up and down arrows through the file and quit the application by pressing'q'.
+| '''less install.txt'''
 |- 
 | '''rm'''
 | Remove a file from the system (if you have the required privileges). To remove a directory with all files in it, use the '''-r''' option. Be careful with this command though, it won't warn you when you are about to destroy all your data.
-{{Cmd|rm portage.tar}}
+| '''rm portage.tar'''
 |-
 |}
 
 === Concurrent terminals ===
-Gentoo's installation CDs allow you to use a couple of terminals simultaneously. That means you can work in one, browse the internet in another and chat on a third. To switch between terminals, type {{Key|Alt}} + {{Key|F#}} (with {{Key|F#}} one of the function keys). You will notice that your current session is at {{Key|F1}}.
 
-You can also work in a terminal and then put your working session in the background using a powerful tool called '''screen'''. With '''screen''' you can even let other people work on your terminal while you are watching every step they perform.
+Gentoo's installation CDs allow you to use a couple of terminals simultaneously.
+That means you can work in one, browse the internet in another and chat on a
+third. To switch between terminals, type '''Alt+F#''' (with '''F#''' one of
+the function keys). You will notice that your current session is at '''F1'''.
 
-Starting a screen session:
+You can also work in a terminal and then put your working session in the
+background using a powerful tool called '''screen'''. With '''screen''' you
+can even let other people work on your terminal while you are watching every
+step they perform.
+
+Starting a screen sess:
 {{Cmd|screen -S mySession}}
 
-To detach a screen session, type {{Key|Ctrl}} + {{Key|A}} followed by a {{Key|d}}.
+To detach a screen session, type 'Ctrl-A' followed by a 'd'.
 
 Reattach to a screen session:
 {{Cmd|screen -x mySession}}
@@ -67,57 +102,88 @@ To quit a screen session, just type 'exit':
 {{Cmd|exit}}
 
 == Networking utilities ==
-Gentoo offers a few utilities on the installation CDs which you can use to surf on the Internet, download files, chat on the IRC network, etc. We will cover a few of them in this section, but you can't use them until you have configured your network (and Internet connection) which is described in the next chapter.
+
+Gentoo offers a few utilities on the installation CDs which you can use to 
+surf on the Internet, download files, chat on the IRC network, etc. We will
+cover a few of them in this section, but you can't use them until you have
+configured your network (and Internet connection) which is described in the next
+chapter.
 
 === Surfing on the Internet ===
-Because no documentation can be perfect and no two environments are alike, you will often search for additional information and help on the Internet. Websites such as the main [https://www.gentoo.org/support/documentation/ Gentoo documentation repository] or powerful search engines like [https://www.google.com/ Google] are a welcome resource during your installation quest.
 
-To browse through these sites you need a browser. Because the Gentoo installation CDs don't contain a graphical environment you need to use either a different system, a different installation medium or a non-graphical browser. The Gentoo installation CDs offer at least one of the following console browsers:
+Because no documentation can be perfect and no two environments are alike, you
+will often search for additional information and help on the Internet. Websites
+such as the main [http://www.gentoo.org/doc/en/index.xml Gentoo
+documentation repository] or powerful search engines like [http://www.google.com Google] are a welcome resource during your
+installation quest.
 
-* '''lynx''', a general purpose web site browser which operates key-driven (for instance {{Key|D}} for downloading, {{Key|G}} to go to a different site, ...).
-* '''links2''', a featureful browser with support for frames, limited JavaScript, svgalib/framebuffer, background downloading, ... which operates both menu-driven (press {{Key|Esc}} to open the menu) as key-driven.
+To browse through these sites you need a browser. Because the Gentoo
+installation CDs don't contain a graphical environment you need to use either a
+different system, a different installation medium or ... a non-graphical
+browser. The Gentoo installation CDs offer at least one of the following console
+browsers:
 
-Both browsers support proxy servers, although the first one uses the standard way (setting an <var>HTTP_PROXY</var> environment variable) while the second one requires you to enter the proxy server in the browser.
+* '''lynx''', a general purpose web site browser which operates key-driven (for instance 'D' for downloading, 'G' to go to a different site, ...).
+* '''links2''', a featureful browser with support for frames, limited JavaScript, svgalib/framebuffer, background downloading, ... which operates both menu-driven (press 'Escape' to open the menu) as key-driven.
 
-For lynx - ignore the <code>export</code> command if no proxy is needed:
-{{Cmd|export <nowiki>HTTP_PROXY="http://myproxy.server.tld:8080"</nowiki>|lynx https://www.gentoo.org}}
+Both browsers support proxy servers, although the first one uses the standard
+way (setting an '''HTTP_PROXY''' environment variable) while the second one
+requires you to enter the proxy server in the browser.
 
-For links2 - ignore the <code>-http-proxy</code> option if no proxy is needed:
+For lynx - ignore the export command if no proxy is needed:
+{{Cmd|export HTTP_PROXY="http://myproxy.server.tld:8080"|lynx http://www.gentoo.org}}
+
+For links2 - ignore the -http-proxy option if no proxy is needed:
 {{Cmd|links2 -http-proxy http://myproxy.server.tld:8080 http://www.gentoo.org}}
 
 === Chatting on an IRC network ===
-When you can't find useful information on the Internet, you can always ask your question on the [irc://irc.freenode.net/gentoo-install #gentoo-install] or [irc://irc.freenode.net/gentoo #gentoo] IRC channels on FreeNode. Gentoo delivers a terminal-based, yet extremely powerful chat client called '''irssi'''.
 
-Its use is quite simple. First, connect to the IRC network. Then, join the channel(s) you want to participate in. You can use {{Key|Alt}} + {{Key|F#}} to switch between channels (or type in '''/window #''' if the key combination fails). To exit the application, type '''/quit'''.
+When you can't find useful information on the Internet, you can always ask your
+question on the [irc://irc.freenode.net/gentoo-install #gentoo-install] or [irc://irc.freenode.net/gentoo #gentoo] IRC channels on FreeNode.
+Gentoo delivers a terminal-based, yet extremely powerful chat client called
+'''irssi'''.
 
-{{Cmd|irssi -c irc.freenode.net YourNickName|output=<pre>
+Its use is quite simple. First, connect to the IRC network. Then, join the
+channel(s) you want to participate in. You can use Alt+F# to switch between
+channels (or type in '''/window #''' if the key combination fails). To
+exit the application, type '''/quit'''.
+
+{{Cmd|irssi -c irc.freenode.net YourNickName}}
+{{GenericCmd|<pre>
 ## (Wait until the connection is made)
 [irssi #] /join #gentoo
-</pre>}}
+</pre>
+}}
 
 === Remote shell access ===
-The Gentoo installation CD contains an ''SSH daemon'', which is a tool to allow others to securely connect to your system so they can help you install Gentoo. This service isn't started by default, but if you want to use it you should:
+
+The Gentoo installation CD contains an ''SSH daemon'', which is a tool to
+allow others to securely connect to your system so they can help you install
+Gentoo. This service isn't started by default, but if you want to use it you
+should:
 
 * get the Internet connection up and running
 * create a user account
 * give the root account a password
 * start the SSH daemon
 
-If you trust the other person, you can give him your root password, but we advise you to only give limited access to the other person - they should help you identify errors and tell you how to resolve them, not fix the errors themselves. Otherwise you won't learn :)
+If you trust the other person, you can give him your root password, but we
+advise you to only give limited access to the other person - they should help
+you identify errors and tell you how to resolve them, not fix the errors
+themselves. Otherwise you won't learn :)
 
-First get the Internet connection up and running, then add the <code>myuser</code> user and give it a password:
+First get the Internet connection up and running, then:
 
 {{RootCmd|useradd -m -G users myuser
 |passwd myuser}}
 
-Now give the <code>root</code> user a (different) password:
+Give the 'myuser' user a password
 
 {{RootCmd|passwd}}
 
-At this point you can start the <code>sshd</code> service:
+This will give the 'root' user a (different) password.
 
 {{RootCmd|rc-service sshd start}}
 
-The passwords you set here are limited to the Gentoo installation CD environment and only until you reboot. They are not used for your final Gentoo installation!
-
-[[Category:Complete Handbook]]
+The passwords you set here are limited to the Gentoo installation CD environment
+and only until you reboot. They are not used for your final Gentoo installation!
